--- a/app/views/case/risk.html
+++ b/app/views/case/risk.html
@@ -21,155 +21,13 @@
 {% endblock %}
 
 {% block content %}
+  {% include "case/_case-service-user-banner.html" %}
+  {% set currentNavSection = 'risk' %}
+  {% include "case/_case-nav.html" %}
 
-{% include "case/_case-service-user-banner.html" %}
+  <h1 class="govuk-heading-l">{{ title }}</h1>
 
-{% set currentNavSection = 'risk' %}
-{% include "case/_case-nav.html" %}
-
-<h1 class="govuk-heading-l">{{ title }}</h1>
-
-{% set roshHtml %}
-  {% set overallRiskHtml %}
-    <p>
-      {{ govukTag({
-        text: case.riskOfSeriousHarmLevel.text + ' risk of harm',
-        classes: case.riskOfSeriousHarmLevel.class
-      }) }}
-    </p>
-    <!-- <p>There are identifiable indicators of risk of serious harm. The offender has the potential to cause serious harm but is unlikely to do so unless there is a change in circumstances, for example, failure to take medication, loss of accommodation, relationship breakdown, drug or alcohol misuse.</p> -->
-  {% endset %}
-
-  {% set veryHighRiskOfHarm %}
-    <ul class="govuk-list">
-      {% for risk in filterRiskByRiskLevel(case, 'Very high') %}
-        <li>{{ risk.riskTo }}</li>
-      {% endfor %}
-    </ul>
-  {% endset %}
-
-  {% set highRiskOfHarm %}
-    <ul class="govuk-list">
-      {% for risk in filterRiskByRiskLevel(case, 'High') %}
-        <li>{{ risk.riskTo }}</li>
-      {% endfor %}
-    </ul>
-  {% endset %}
-
-  {% set mediumRiskOfHarm %}
-    <ul class="govuk-list">
-      {% for risk in filterRiskByRiskLevel(case, 'Medium') %}
-        <li>{{ risk.riskTo }}</li>
-      {% endfor %}
-    </ul>
-  {% endset %}
-
-  {% set lowRiskOfHarm %}
-    <ul class="govuk-list">
-      {% for risk in filterRiskByRiskLevel(case, 'Low') %}
-        <li>{{ risk.riskTo }}</li>
-      {% endfor %}
-    </ul>
-  {% endset %}
-
-  {{ govukSummaryList({
-    rows: [
-      {
-        key: { text: "Overall" },
-        value: { html: overallRiskHtml }
-      },
-      {
-        key: { text: "Very high risk groups" },
-        value: { html: veryHighRiskOfHarm if filterRiskByRiskLevel(case, 'Very high').length > 0 else 'None' }
-      },
-      {
-        key: { text: "High risk groups" },
-        value: { html: highRiskOfHarm if filterRiskByRiskLevel(case, 'High').length > 0 else 'None' }
-      },
-      {
-        key: { text: "Medium risk groups" },
-        value: { html: mediumRiskOfHarm if filterRiskByRiskLevel(case, 'Medium').length > 0 else 'None' }
-      },
-      {
-        key: { text: "Low risk groups" },
-        value: { html: lowRiskOfHarm if filterRiskByRiskLevel(case, 'Low').length > 0 else 'None' }
-      },
-      {
-        key: { text: "Who is at risk" },
-        value: { html: case.risk.whoIsAtRisk if case.risk.whoIsAtRisk else 'No detail given' }
-      },
-      {
-        key: { text: "Nature of risk" },
-        value: { html: case.risk.natureOfRisk if case.risk.natureOfRisk else 'No detail given' }
-      },
-      {
-        key: { text: "When is risk greatest" },
-        value: { html: case.risk.riskImminence if case.risk.riskImminence else 'No detail given' }
-      }
-    ]
-  }) }}
-{% endset %}
-
-{{ appSummaryCard({
-  titleText: "Risk of serious harm (ROSH) in the community",
-  classes: 'govuk-!-margin-bottom-6 app-summary-card--large-title',
-  html: roshHtml,
-  actions: {
-    items: [
-      {
-        href: "#",
-        text: "View risk assessment on OASys"
-      }
-    ]
-  }
-}) }}
-
-{% include 'case/risk/_risk-to-themselves.html' %}
-
-{% set riskFlags %}
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <p>Risk flags (registrations) show circumstances that need prominent and constant visibility. Review flags regularly, and remove them when they are no longer appropriate.</p>
-    </div>
-  </div>
-
-  <table class="govuk-table govuk-!-margin-bottom-4">
-    <thead class="govuk-table__head">
-      <tr class="govuk-table__row">
-        <th class="govuk-table__header" style="width: 30%">Flag</th>
-        <th class="govuk-table__header" style="width: 55%">Notes</th>
-        <th class="govuk-table__header" style="width: 15%">Review due</th>
-      </tr>
-    </thead>
-    <tbody class="govuk-table__body">
-      {% for flag in case.riskFlags %}
-        {% if not flag.rosh %}
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">{{ appRiskFlag({ flag: flag, CRN: CRN }) }}</td>
-            <td class="govuk-table__cell app-flags-table-cell">{{ flag.notes }}</td>
-            <td class="govuk-table__cell app-flags-table-cell">{{ flag.reviewDue | dateWithYear }}</td>
-          </tr>
-        {% endif %}
-      {% endfor %}
-    </tbody>
-  </table>
-
-  <p class="govuk-!-margin-bottom-0">
-    <a href="/cases/{{ CRN }}/historic-risk-flags">View removed risk flags (4)</a>
-  </p>
-{% endset %}
-
-{{ appSummaryCard({
-  titleText: "Risk flags",
-  classes: 'govuk-!-margin-bottom-6 app-summary-card--large-title',
-  html: riskFlags,
-  actions: {
-    items: [
-      {
-        href: "#",
-        text: "Add a risk flag in Delius"
-      }
-    ]
-  }
-}) }}
+  {% include 'case/risk/_risk-in-the-community.html' %}
+  {% include 'case/risk/_risk-to-themselves.html' %}
+  {% include 'case/risk/_risk-flags.html' %}
 {% endblock %}
