--- a/app/views/case/index.html
+++ b/app/views/case/index.html
@@ -66,7 +66,7 @@
     </dl>
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-    <h2 class="govuk-heading-m">
+    <!-- <h2 class="govuk-heading-m">
       Risk flags
     </h2>
 
@@ -125,6 +125,8 @@
     }) }}
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+    -->
+
     <h2 class="govuk-heading-m">
       Criminogenic needs
     </h2>
