Risk of serious harm, not Risk of harm
Serious harm is different. The distinction is important.

--- a/app/views/case/risk/_risk-in-the-community.html
+++ b/app/views/case/risk/_risk-in-the-community.html
@@ -2,7 +2,7 @@
   {% set overallRiskHtml %}
     <p>
       {{ govukTag({
-        text: case.riskOfSeriousHarmLevel.text + ' risk of harm',
+        text: case.riskOfSeriousHarmLevel.text + ' risk of serious harm',
         classes: case.riskOfSeriousHarmLevel.class
       }) }}
     </p>
